# spec-driven-development

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
ai-tools/: project.md  skills.md
ai-tools/prompts/: generate_code.md  generate_tests.md
ai-tools/scripts/: gen_code.py  gen_tests.py  promote.py
ai-tools/specs/: _spec_template.md  spec_reusable_core_infra.md
src/api/v1/: deps.py  health.py
src/core/: errors.py  logging.py
src/models/: base.py
tests/: conftest.py
tests/integration/: test_errors.py  test_health.py
tests/unit/: test_deps.py  test_logging.py  test_models.py
