[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
 
[project]
name = "agentic-ai-api"
version = "0.1.0"
description = "Simple Agentic AI API — FastAPI + LangGraph + OpenAI"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "langchain>=0.2.0",
    "langchain-openai>=0.1.0",
    "langgraph>=0.1.0",
    "openai>=1.30.0",
    "python-dotenv>=1.0.0",
]
 
[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]
 
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
 
[tool.ruff]
line-length = 88
target-version = "py311"
 
[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
 
[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true